Only allow manager of employee access to manager/attachments. DAT-1017
